fix bug on mobile

--- a/app/assets/css/header.css
+++ b/app/assets/css/header.css
@@ -149,6 +149,7 @@ body {
   background-color: #fff;
   min-width: 320px;
   min-height: 100vh;
+  min-height: -webkit-fill-available;
   position: relative;
   overflow-x: hidden;
 }
