--- a/app/assets/sass/inc/_o2tNormalize.sass
+++ b/app/assets/sass/inc/_o2tNormalize.sass
@@ -49,6 +49,8 @@ body
     background-color: #fff
     min-width: 320px
     min-height: 100vh
+    min-height: -webkit-fill-available // fix bug on mobile
+
     position: relative
     overflow-x: hidden
     input,
